# pain.github.io

./: README.md  __init__.py  _config.yml  app_crud.py  authorize.html  description.md  index.md  information.md  main.py  model.py  myDB.db  personalitytest.py  pyproject.toml  query.py  replit.nix  requirements.txt  roles.md
_includes/: head-custom2.html  navigation.html
_layouts/: default.html
arty/: app_art.py
arty/templates/arty/: art.html
assets/css/: style.sccs
contenty/templates/contenty/: content.html
crud/: app_crud.py  model.py  query.py
cruddy/: app_crud.py  app_crud_api.py  login.py  model.py  query.py
cruddy/static/javascript/scss/: custom.css.map  custom.scss
cruddy/templates/cruddy/: authorize.html  crud.html  crud_async.html  login2.html  mauthorize.html  mlogin.html  search.html
model/: myDB.db
notey/: app_notes.py
notey/templates/: notes.html
notey/templates/notey/: notes.html
static/javascript/: navbar.js
static/scss/: custom.css  custom.scss
templates/: 404.html  api.html  authorize.html  burnbook.html  draw.html  game1.html  game2.html  games.html  gmap.html  health.html  index.html  journal.html  layout.html  login.html  meditate.html  music.html  quiz.html  therapistmap.html  therapistnearyou.html
templates/fragments/: footer.html  navbar.html  videobackground.html
volumes/: myDB.db
