[tool.poetry]
name = "repl_python3_pagespython-2"
version = "0.1.0"
description = ""
authors = ["jmort1021 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.35"
Werkzeug = "^2.1.1"
Flask = "^2.1.1"
Flask-Login = "^0.6.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
